--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
-# Project exclude paths
-/.gradle/
+# Default ignored files
+/shelf/
+/workspace.xml
+# Editor-based HTTP Client requests
+/httpRequests/
+# Datasource local storage ignored files
+/dataSources/
+/dataSources.local.xml
+# Generated IntelliJ Sources
+/build/
